@@ -29,6 +29,7 @@ Bug fixes
  * Re-added 'Close Explorer' button on mobile viewports (Sævar Öfjörð Magnússon)
  * Added a more descriptive label to Password reset link for screen reader users (Casper Timmers, Martin Coote)
  * Improved Wagtail logo contrast by adding a background (Brian Edelman, Simon Evans, Ben Enright)
+ * Prevent duplicate notification messages on page locking (Jacob Topp-Mugglestone)
 
 Upgrade considerations
 ======================
